@startuml

class User {
    Collection Features
    Collection Quests
    Collection Steps
    string username
    int level
}

class Feature {
    Collection Quests
    string title
    string description
    string imageUrl
    int level
}

class Quest {
    Collection Steps
    string title
    string description
    string imageUrl
    integer maxSteps
}

class Step {
    string comment
    DateTime completedAt
    User user
    Quest quest
}

class Achievement {
    User user
    string title
    string description
    string imageUrl
    DateTime awardedAt
}

User <-left-> Feature
User <--> Quest
User <-> Step
User <-down- Achievement

Feature --> Quest
Quest <--> Step

@enduml